# stellar-weave

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 0001_init.sql  0002_add_follows.sql
backend/src/: config.rs  db.rs  ingest.rs  main.rs  parse.rs  routes.rs
contracts/: Cargo.toml
contracts/follow-graph/: Cargo.toml  DEPLOYMENT.md  DEPLOYMENT.v1.md
contracts/follow-graph/src/: lib.rs
contracts/follow-graph/test_snapshots/test/: test_counts_default_to_zero.1.json  test_cross_contract_owner_matches_registered.1.json  test_duplicate_follow_returns_already_following.1.json  test_follow_increments_counts.1.json  test_follow_nonexistent_followee.1.json  test_follow_nonexistent_follower.1.json  test_follow_success_and_is_following.1.json  test_follow_unfollow_follow_consistency.1.json  test_follow_without_auth_fails.1.json  test_get_followers_pagination.1.json  test_self_follow_returns_error.1.json  test_two_followers_appear_in_list.1.json  test_unfollow_decrements_counts.1.json  test_unfollow_not_following.1.json  test_unfollow_success.1.json  test_unfollow_without_auth_fails.1.json  test_upgrade_fails_for_non_admin.1.json  test_upgrade_succeeds_for_stored_admin.1.json  test_upgrade_to_self_preserves_follow_state.1.json  test_version_returns_2.1.json
contracts/profile-registry/: Cargo.toml  DEPLOYMENT.md  DEPLOYMENT.v1.md
contracts/profile-registry/src/: lib.rs
contracts/profile-registry/test_snapshots/test/: test_duplicate_handle_different_case.1.json  test_duplicate_handle_same_case.1.json  test_handle_exactly_30_chars_succeeds.1.json  test_handle_invalid_hyphen.1.json  test_register_counter_increments.1.json  test_register_requires_owner_auth.1.json  test_register_returns_id_starting_at_one.1.json  test_resolve_handle_case_insensitive.1.json  test_resolve_handle_not_found.1.json  test_transfer_ownership_event_carries_new_owner.1.json  test_transfer_ownership_non_owner_fails.1.json  test_transfer_ownership_success.1.json  test_update_metadata_event_carries_new_value.1.json  test_update_metadata_success.1.json  (+3 more)
frontend/: .env.example  (+4 more)
(+28 files in other folders)
