[workspace]
members = ["profile-registry"]
resolver = "2"

# soroban-env-host uses the ed25519-dalek v2 API internally (rand_core compat),
# but its semver constraint allows v3 which breaks compilation. Pin to v2.
[workspace.dependencies]
ed25519-dalek = "=2.2.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
